Fix header padding on small screens

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -1,6 +1,6 @@
 // header wrapper
 .site__header {
-    padding-top: 2.875em;
+    padding-top: 1em;
     padding-bottom: 2.875em;
     color: $color-white;
     background-image: url(/img/background-header.jpg);
@@ -8,6 +8,10 @@
     background-color: $color-secondary;
 
     @include clearfix;
+
+    @media ($mq-medium-up) {
+        padding-top: 2.875em;
+    }
 }
 
 // logo
